# goose

crates/cockpit-task/: Cargo.toml  README.md
crates/cockpit-task/examples/: simple_client.rs  structured_output_client.rs
crates/cockpit-task/src/: agent_executor.rs  lib.rs  main.rs  task_request.rs  task_response.rs
